# nix-flake-versioning

./: README.md  flake.nix  pyproject.toml
nix/: shared.nix
pythonedaartifactapplicationnixflakeversioning/: pythoneda-artifact-application-nix-flake-versioning.py
